# houdini-node

./: .gitignore  Cargo.toml  README.md  justfile
examples/: main.rs
houdini/unpacked/: INDEX__SECTION  Sections.list
houdini/unpacked/Sop_1rustnode/: CreateScript  DialogScript  FunctionName  PythonCook  Sections.list
src/: attribute_data_basic.rs  attribute_types.rs  lib.rs
