[workspace]

[package]
name = "houdini-node"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = ">=0.21.3" }
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "2.0"
serde_json = "1.0"
itertools = "0.14.0"
houdini-node-macro = { path = "packages/houdini-node-macro" }